[gd_scene load_steps=2 format=3 uid="uid://dg3wq8h5m9pk1"]

[ext_resource type="Script" path="res://examples/space_shooter/scripts/pilot_selection_ui.gd" id="1"]

[node name="PilotSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
text = "SELECT YOUR PILOT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="PilotName" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 70.0
offset_bottom = 100.0
grow_horizontal = 2
text = "Pilot Name"
horizontal_alignment = 1

[node name="Archetype" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 125.0
grow_horizontal = 2
text = "Archetype"
horizontal_alignment = 1

[node name="Difficulty" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 125.0
offset_bottom = 150.0
grow_horizontal = 2
text = "Difficulty: MEDIUM"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 160.0
offset_bottom = 180.0
grow_horizontal = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 180.0
offset_bottom = 200.0
grow_horizontal = 2
text = "DESCRIPTION"
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 205.0
offset_bottom = 275.0
grow_horizontal = 2
text = "Pilot description goes here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 285.0
offset_bottom = 305.0
grow_horizontal = 2

[node name="BonusesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 305.0
offset_bottom = 325.0
grow_horizontal = 2
text = "BONUSES"
horizontal_alignment = 1

[node name="BonusesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 330.0
offset_bottom = 490.0
grow_horizontal = 2

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 500.0
offset_bottom = 520.0
grow_horizontal = 2

[node name="AbilityLabel" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 520.0
offset_bottom = 540.0
grow_horizontal = 2
text = "SPECIAL ABILITY"
horizontal_alignment = 1

[node name="AbilityDescription" type="Label" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 545.0
offset_bottom = 595.0
grow_horizontal = 2
text = "Ability description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer5" type="Control" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 605.0
offset_bottom = 625.0
grow_horizontal = 2

[node name="NavigationContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 625.0
offset_bottom = 665.0
grow_horizontal = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/NavigationContainer"]
layout_mode = 2
text = "< PREV"

[node name="Spacer" type="Control" parent="VBoxContainer/NavigationContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer/NavigationContainer"]
layout_mode = 2
text = "NEXT >"

[node name="Spacer6" type="Control" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 675.0
offset_bottom = 685.0
grow_horizontal = 2

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 685.0
offset_bottom = 725.0
grow_horizontal = 2
text = "CONTINUE"
